--- a/src/views/components/Hero/Hero.sass
+++ b/src/views/components/Hero/Hero.sass
@@ -41,7 +41,9 @@
             .buttons-group
                 display: flex
                 gap: 20px
-
+                margin-bottom: 20px
+                @media all and (min-width: 768px)
+                    margin-bottom: 0
                 .btn-primary
                     @include btn-primary(400, 14px)
                     @media all and (min-width: 768px)
@@ -57,7 +59,10 @@
                 position: relative
                 right: 50px
                 padding-bottom: 0
-                top: 5px
+                max-height: 300px
+                @media all and (min-width: 768px)
+                    max-height: revert-layer
+                    top: 5px
 
 @media all and (min-width: 1024px)
     .hero-container
