--- a/src/views/components/Hero/Hero.sass
+++ b/src/views/components/Hero/Hero.sass
@@ -52,7 +52,7 @@
                 .btn-secondary
                     @include btn-secondary(400, 14px)
                     @media all and (min-width: 768px)
-                        @include btn-primary(400, 16px)
+                        @include btn-secondary(400, 16px)
         .hero-right
             padding-bottom: 0
             img
