--- a/src/views/components/Header/Header.sass
+++ b/src/views/components/Header/Header.sass
@@ -11,9 +11,11 @@
     display: flex
     justify-content: space-between
     flex-direction: row
-    z-index: 2
+    z-index: 99
+    position: relative
     align-items: center
     padding: 20px
+    background: $secondary-color
 
     .menu-icon
         cursor: pointer
