--- a/src/views/components/MobileFilter/MobileFilter.sass
+++ b/src/views/components/MobileFilter/MobileFilter.sass
@@ -1,7 +1,14 @@
+@import '../../App.sass'
+
 .mobile-filter-container
     display: flex
     justify-content: space-between
     margin-bottom: 20px
+    align-items: center
+    .item
+        color: $primary-color
+        font-size: 18px
+        font-weight: 600
 
     @media all and (min-width: 768px)
         display: none
