--- a/src/views/components/Hero/Hero.sass
+++ b/src/views/components/Hero/Hero.sass
@@ -29,10 +29,10 @@
                 padding-bottom: 5px
 
             h2
-                font-size: 1.5em
+                font-size: 1.2em
                 font-weight: bold
                 margin: 0
-                padding-bottom: 20px
+                // padding-bottom: 20px
 
             p
                 padding-bottom: 20px
@@ -76,7 +76,8 @@
                     font-size: 3.75em
 
                 h2
-                    font-size: 2.87em
+                    font-size: 2em
+                    padding-bottom: 20px
 
                 p
                     max-width: 480px
