--- a/src/views/components/ListingDogFilter/ListingDogFilter.sass
+++ b/src/views/components/ListingDogFilter/ListingDogFilter.sass
@@ -11,7 +11,14 @@
         color: $primary-color
 
     .leftGroup
-        padding: 20px
+        width: 100%
+        
+        @medial all and (min-width: 768px)
+            padding: 20px 
+        
+        h5
+            margin-bottom: 15px
+
         .dogsGroup
             display: grid
             gap: 20px
