--- a/src/views/App.sass
+++ b/src/views/App.sass
@@ -122,6 +122,7 @@ body
       display: flex
       flex-direction: column
       gap: 10px
+      padding: 15px
 
       h1
          color: $primary-color
