--- a/src/views/components/Header/Header.sass
+++ b/src/views/components/Header/Header.sass
@@ -34,9 +34,13 @@
 
     &.active
         animation: slide-in-top 0.5s forwards
+        @media all and (min-width: 768px)
+            animation: none
 
     &.inactive
         animation: slide-out-top 0.8s forwards
+        @media all and (min-width: 768px)
+            animation: none
 
     .btn-primary
         @include btn-primary(700, 14px)
